# antenna-optimizer

./: .gitignore  MANIFEST.in  Makefile  README.rst  antenna_model.py  coaxmodel.py  folded.nec  folded.py  folded2.nec  folded_3ele.py  folded_bc.py  folded_bigrefl.py  hb9cv.py  logper.py  optimize.overview  pyproject.toml  setup.py  stats-2ele.txt  stats-3ele.txt  stats-balcony.txt  stats-hb9cv.txt  statstool.py  tl.py  transmission.py
antenna_optimizer/: __init__.py  antenna_model.py  coaxmodel.py  folded.py  folded_3ele.py  folded_bc.py  folded_bigrefl.py  hb9cv.py  hf_folded.py  hf_fuchs.py  hf_inverted_v.py  logper.py  multi_dipole.py  statstool.py  tl.py  transmission.py
test/: .gitignore  Makefile  folded-bc.data  folded-bc.nec  folded-multi.data  folded-multi.nec  folded-refl-multi.data  folded-refl-multi.nec  folded-refl.data  folded-refl.nec  folded3-multi.data  folded3-multi.nec  hb9cv.data  hb9cv.nec  tl.data  tl.nec
